--- a/main.css
+++ b/main.css
@@ -10,7 +10,8 @@ body {
 
 #nav {
   height: 100px;
-  /* width: 100px; */
+  /* width: 70px; */
+  border-bottom: 2px solid gray;
 }
 
 #navTitles {
@@ -23,16 +24,20 @@ body {
 
 #picBox {
   height: 230px;
-  /* width: 100px; */
+  width: 70%;
+  border-top: 2px solid gray;
   border: 2px solid rgb(10, 148, 44);
+  margin-left: 190px;
 }
 
 #grid {
   display: grid;
-  /* width: 100%; */
+  /* width: 80%; */
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   column-gap: 10px;
-  row-gap: 15px;
+  row-gap: 20px;
+  /* margin-left: 100px; */
+  /* padding: 0px 40px 40px 40px; */
 }
 
 .title {
@@ -86,4 +91,20 @@ body {
   height: 50px;
   width: 85%;
   border-radius: 30px;
+}
+
+#navTitles:hover > .dropdown {
+  display: flex;
+  width: 30%;
+  padding: 10px;
+  background-color: indigo;
+}
+
+.item-drop-down:hover {
+}
+
+.dropdown-item-label {
+}
+
+.dropdown-block {
 }
